# FMODTest

./: settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  native.h
app/src/main/java/com/test/fmodtest/: Content.java  FModUtil.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/main/res/values-night/: themes.xml
dynamicMethod/: build.gradle
dynamicMethod/src/main/: AndroidManifest.xml
dynamicMethod/src/main/cpp/: CMakeLists.txt  log.h  native-lib.cpp
dynamicMethod/src/main/java/com/test/dynamicmethod/: MainActivity.java  TestUtil.java
dynamicMethod/src/main/res/values/: strings.xml  themes.xml
gradle/wrapper/: gradle-wrapper.properties
